# styleguides

./: cguide.md  python.md
python/: pyproject.toml
